# cloak

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CNAME  README.md  SKILL.md  index.html  install.sh  llms.txt  robots.txt  sitemap.xml
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: auth.rs  detector.rs  envparser.rs  filemanager.rs  keychain.rs  lib.rs  license.rs  main.rs  platform.rs  recovery.rs  sandbox.rs  vault.rs  version.rs
cli/src/commands/: edit.rs  export.rs  init.rs  keychain_get.rs  mod.rs  peek.rs  recover.rs  reveal.rs  run.rs  set.rs  status.rs  unprotect.rs  update.rs
cli/src/keychain/: default.rs  macos.rs  mod.rs
cli/tests/: detector_test.rs  envparser_test.rs  filemanager_test.rs  keychain_test.rs  platform_test.rs  recovery_test.rs  sandbox_test.rs  vault_test.rs
docs/superpowers/plans/: 2026-04-04-biometric-keychain.md
docs/superpowers/specs/: 2026-04-04-biometric-keychain-design.md
extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extension/src/: commands.ts  detector.ts  envparser.ts  extension.ts  filemanager.ts  keychain.ts  onboarding.ts  providers.ts  recovery.ts  sandbox.ts  statusbar.ts  vault.ts  version.ts  watcher.ts
extension/tests/: cross-compat.test.ts  detector.test.ts  envparser.test.ts  recovery.test.ts  sandbox.test.ts  vault.test.ts
scripts/: cross-compat-test.sh  install.ps1  release.sh
